# resume-ranker

./: .gitignore  Architecture_Data_Flow.md  README.md  architecture.md  compare_trails.py  generate_candidate_mds.py  generate_shift_mds.py  main.py  plan.md  pyproject.toml  rank.py  rank_shift_analysis.csv  run_pipeline.ps1  submission.csv  submission_metadata.yaml  template_builder.py
EDA/: EDA.ipynb
EDA/.ipynb_checkpoints/: EDA-checkpoint.ipynb
Model1/: features.py  index_builder.py  rank.py
Trail_9/: cross_encoder_top100.csv  rank.py
Trails/Trail_1/: index_builder.py  rank.py  submission.csv
Trails/Trail_2/: index_builder.py  rank.py  submission.csv
Trails/Trail_3/: compare_submissions.py  metrics_report.txt  rank.py
Trails/Trail_4/: metrics_report.txt  rank.py  test_splade_500.py  test_splade_only.py  timeline_validator.py
Trails/Trail_6/: template_builder.py  test_hybrid_retrieval.py
Trails/Trail_7/: rank.py
Trails/Trail_8/: rank.py
archive/: LLM_PROMPT.md  implementation_plan.md  plan (1).md  plan.md
archive/Trails/: plan.md
candidates/: Kabir Mukherjee.md  Sneha Bansal.md  Sneha Singh.md  select_candidates.py
context/: parsed_jd.json
sandbox/: explain.md  pyproject.toml  run_pipeline_colab.ipynb  submission.csv  submission_metadata.yaml
sandbox/index/: jd_dense_query.npy  jd_sparse_query.npy
sandbox/src/: optimize_rank.py
scratch/: analyze_actual_data.py
scripts/: download_llama_server.py  download_q4.py  download_qwen25.py  download_tokenizers.py  export_bge_int8.py  quantize_bge.py  quantize_int8.py
src/: optimize_rank.py
(+167 files in other folders)
