[project]
name = "india-runs-data-and-ai-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.32",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "xgboost>=3.3.0",
]
